# cim-domain-person

./: .envrc.example  .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  Cargo.toml  DEMO_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  NATS_CLUSTER_TEST_RESULTS.md  PHASE2_SUMMARY.md  README.md  VISUAL_DEMO_SUMMARY.md  changelog.md  flake.nix  person_relationship_data.json  person_relationship_graph.html  phase3-summary.md  progress.json
.claude/: CIM_DOMAIN_STANDARDIZATION.md  CIM_DOMAIN_TEMPLATE.md  CONVERSION_GUIDE.md  api-quick-reference.md  architecture-decisions.md  common-tasks.md  cross-domain-map.md  development-guidelines.md  module-context.md  troubleshooting.md
.claude/scripts/: new-cim-domain.sh
benches/: event_processing.rs
deployment/: CONTAINER_DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  README.md
deployment/nix/: README.md  container.nix  flake.nix  module.nix
deployment/systemd/: cim-domain-person.service  environment.example  install.sh
doc/: DOCUMENTATION_STATUS.md  FRP-CT-COMPLIANCE.md  README-PERSON-DOMAIN.md  README.md  api-reference.md  api.md  architecture.md  components.md  development.md  integration.md  person-attributes-category-theory.md  person-attributes-design.md  person-names-design.md  person-names-examples.md
doc/algebra/: README.md
docs/: README.md  USER_STORIES.md  api_reference.md  cross-reference.md  current-architecture-analysis.md  domain_overview.md  implementation_guide.md  index.md  migration-complete.md  migration-summary.md  network_analysis_guide.md  phase-4-implementation-tracker.md  phase-4-nats-refactoring.md  pragmatic-migration-plan.md  pure-event-driven-architecture.md  simplified-migration-plan.md  target-architecture-design.md  testing_guide.md  user_stories.md  week-1-streaming-migration.md  week-2-async-migration.md  week-3-state-machines.md  week-4-versioning-policies.md  week-5-testing-migration.md
docs/algebra/: README.md
docs/api/: README.md
examples/: adding_attributes.rs  async_command_processing.rs  comprehensive_crm_demo.rs  crm_person_composition.rs  full_integration.rs  full_person_demo.rs  interactive_graph_export.rs  nats_cluster_test.rs  nats_jetstream_test.rs  nats_simple_test.rs  person_ecs_simple.rs  pure_event_driven_demo.rs  relationship_network_demo.rs  state_machine_demo.rs  streaming_setup.rs  versioning_and_policies.rs  visual_relationship_graph.rs  working_person_demo.rs
scripts/: migrate_events.rs  verify_migration.rs
src/: category_theory.rs  event_store.rs  lib.rs
src/aggregate/: mod.rs  person.rs  person_ecs.rs  person_onboarding.rs  person_states.rs  state_machine.rs
src/commands/: component_commands.rs  mod.rs
src/components/: contact.rs  mod.rs  preferences.rs  skills.rs
src/cross_domain/: agent_integration.rs  git_integration.rs  identity_integration.rs  location_integration.rs  mod.rs  person_location.rs  person_organization.rs
tests/: attribute_addition_tests.rs  component_management_tests.rs  component_store_integration_tests.rs  cross_domain_integration_tests.rs  debug_lifecycle.rs  event_replay_tests.rs  identity_management_tests.rs  missing_functionality_tests.rs  person_aggregate_test.rs  person_aggregate_tests.rs  person_attribute_tests.rs  person_basic_tests.rs  person_component_tests.rs  person_comprehensive_tests.rs  person_domain_tests.rs  person_ecs_tests.rs  person_lifecycle_tests.rs  person_merge_tests.rs  person_name_tests.rs  privacy_compliance_tests.rs  projection_tests.rs  relationship_management_tests.rs  test_accessor_methods.rs  test_component_tracking.rs  test_person_merge_only.rs
(+68 files in other folders)
