[package]
name = "cim-domain-person"
version = "0.1.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Person domain for CIM"
license = "MIT"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["cim", "domain", "person", "identity"]
categories = ["data-structures"]

[dependencies]
# Domain dependencies
cim-domain = { path = "../cim-domain" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async dependencies
async-trait = "0.1"
tokio = { version = "1.38", features = ["full"] }

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"
pretty_assertions = "1.4"
rstest = "0.18"
tracing-subscriber = "0.3"
