[package]
name = "cim-domain-person"
version = "0.7.8"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Person domain for CIM - NATS-first messaging with comprehensive identity management"
license = "MIT"
repository = "https://github.com/thecowboyai/alchemist"
homepage = "https://github.com/thecowboyai/alchemist"
keywords = ["cim", "domain", "person", "identity", "nats"]
categories = ["data-structures", "web-programming"]

[dependencies]
# Domain dependencies - using local version with FormalEntityId blanket impl
cim-domain = { path = "../cim-domain" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v7", "serde"] }

# Async dependencies
async-trait = "0.1"
tokio = { version = "1.32", features = ["full"] }
async-nats = "0.35"
futures = "0.3"
tokio-stream = "0.1"

# Content addressing and cryptographic hashing
cid = "0.11"
multihash = "0.19"
blake3 = "1.5"

# Additional dependencies for streaming
rand = "0.8"
tracing-subscriber = "0.3"
regex = "1.10"

[dev-dependencies]
# Test dependencies
tokio-test = "0.4"
pretty_assertions = "1.4"
rstest = "0.18"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "event_processing"
harness = false

[[bin]]
name = "migrate_events"
path = "scripts/migrate_events.rs"
required-features = ["migration"]

[[bin]]
name = "verify_migration"
path = "scripts/verify_migration.rs"
required-features = ["migration"]

[features]
default = []
migration = ["clap"]

[dependencies.clap]
version = "4.4"
optional = true
